update fetching data